Refactor CarService to use ArrayList for DTO list creation